Fix info contrast

--- a/src/styles/components/_auth-form.scss
+++ b/src/styles/components/_auth-form.scss
@@ -300,7 +300,7 @@
       &.input-touched {
         color: $primary;
         &::-webkit-calendar-picker-indicator {
-          background-image: url("../../assets/icons/calander.svg");
+          background-image: url("../../assets/icons/calander.svg") !important;
         }
       }
     }
